fixed overflow scrolling issue.

--- a/src/global.css
+++ b/src/global.css
@@ -92,4 +92,5 @@
 }
 body {
   background: var(--bodyBG);
+  overflow-x: hidden;
 }
